No more one request per loan. Batch and orchestration! (#571)
* batch request endpoint in contacts, its modular letting you choose what contact info to include

* core route to use batch route in contacts adn fix

* front end usage

* prettier

* orchestration route, avoid unnecessary round trip to front end client

* created enrichment helper for orchestration in core routes. added new orchestration logic to the keys serach when inlcuding contacts

* key subtable keyloans using the orchastration

* ytterligare användn9ingar av separata calls för contactinfo, lagda i orchestreringslagret

* type edit

* remove unused

* tests

* update snapshot
